--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -161,6 +161,20 @@
 
                             <div class="row col-12">
                                 <div class="col-6 text-right">
+                                    <p><strong>Permit Type: </strong></p>
+                                </div>
+                                <div class="col-6 text-left">
+                                    <p *ngIf="currentYearAnnualRecord.NDEEAmount">
+                                        {{ currentYearAnnualRecord.ChemigationPermitAnnualRecordFeeTypeName }}
+                                    </p>
+                                    <em *ngIf="!currentYearAnnualRecord.ChemigationPermitAnnualRecordFeeTypeName" class="text-muted">
+                                        N/A
+                                    </em>
+                                </div>
+                            </div>
+
+                            <div class="row col-12">
+                                <div class="col-6 text-right">
                                     <p><strong>NDEE Amount: </strong></p>
                                 </div>
                                 <div class="col-6 text-left">
