CRUDing on CPAR Fee Type

--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -164,7 +164,7 @@
                                     <p><strong>Permit Type: </strong></p>
                                 </div>
                                 <div class="col-6 text-left">
-                                    <p *ngIf="currentYearAnnualRecord.NDEEAmount">
+                                    <p *ngIf="currentYearAnnualRecord.ChemigationPermitAnnualRecordFeeTypeName">
                                         {{ currentYearAnnualRecord.ChemigationPermitAnnualRecordFeeTypeName }}
                                     </p>
                                     <em *ngIf="!currentYearAnnualRecord.ChemigationPermitAnnualRecordFeeTypeName" class="text-muted">
