--- a/Source/Zybach.Web/src/app/shared/components/chemigation-permit-annual-record-upsert/chemigation-permit-annual-record-upsert.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/chemigation-permit-annual-record-upsert/chemigation-permit-annual-record-upsert.component.html
@@ -13,7 +13,7 @@
             </div>
 
             <div class="col-6 control-label text-right mb-2">
-                <label class="required"><strong>Permit Type: </strong></label>
+                <label class="required"><strong>Fee Type: </strong></label>
             </div>
             <div class="col-6 text-left mb-2">
                 <ng-select [(ngModel)]="model.ChemigationPermitAnnualRecordFeeTypeID"
