refactor ListChemigationPermits by well ID endpoint to return ChemigationPermitDetailedDto instead of ChemigationPermitAnnualRecordDetailedDto, use this to display most recent inspection date in permit table; finish inspection grids

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.scss
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.scss
@@ -1,3 +1,5 @@
+@import "~src/scss/_variables.scss";
+
 th {
     width: 25%;
     text-align: right;
@@ -10,4 +12,8 @@ td {
 #dateRangeInput{
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
+}
+
+h5 {
+    color: $primary;
 }
