--- a/Source/Zybach.Web/src/app/app.component.html
+++ b/Source/Zybach.Web/src/app/app.component.html
@@ -22,10 +22,11 @@
                 </a>
             </div>            
         </div>
-        <!-- <div class="row mt-2">
-            <div class="col text-center mb-2">
-                © {{currentYear}} Sitka Technology Group, LLC. All Rights Reserved.
+        <hr class="footer-hr w-70" />
+        <div class="row mt-2">
+            <div class="col text-center mb-2 footer-text">
+                This program is free software; you can redistribute it and/or modify it under the terms of the <a class="footer-link" href="https://www.gnu.org/licenses/agpl-3.0.html">GNU Affero General Public License</a>. Source code is available on <a class="footer-link" href="https://github.com/sitkatech/zybach/">GitHub</a>. Developed and Maintained by <a class="footer-link" href="https://sitkatech.com/">Sitka Technology Group</a>.
             </div>
-        </div> -->
+        </div>
     </div>
 </footer>
