removing references to LeadOrganization; added SupportEmail and DoNotReplyEmail env variables

--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -12,9 +12,9 @@
 
 
 <nav class="navbar navbar-expand-xl justify-content-start navbar-zybach-secondary logoPadding">
-    <a href="{{leadOrganizationHomeUrl()}}" class="navbar-logo pt-0" target="_blank"
+    <a href="https://tpnrd.org" class="navbar-logo pt-0" target="_blank"
         style="float:left; position:absolute; z-index:1025; left:0; top: 0">
-        <img src="{{leadOrganizationLogoSrc()}}" />
+        <img src="assets/main/logos/logo_crop.png" />
     </a>
 
     <div class="flex-row navbar-collapse collapse" id="navbar2">
