--- a/Source/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
+++ b/Source/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
@@ -9,11 +9,8 @@
     <ngb-alert *ngIf="userIsUnassigned()" [type]="'info'" [dismissible]="false">
         <span>
             Welcome {{currentUser.FullName}}. You have successfully logged in to the {{platformLongName()}},
-            but your
-            account is not yet configured. You will receive an email from the {{leadOrganizationShortName()}}
-            Administrators when your account is
-            ready to
-            use. You may <a routerLink="/help">Request Support</a> to contact the Administrators with any questions or
+            but your account is not yet configured. You will receive an email from the Administrators when your account is
+            ready to use. You may <a routerLink="/help">Request Support</a> to contact the Administrators with any questions or
             comments.
         </span>
     </ngb-alert>
