--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -105,20 +105,24 @@
 
     <div class="navbar-collapse collapse pt-2 pt-md-0" id="navbar2" *ngIf="isAuthenticated() && !isUnassigned()">
         <ul class="navbar-nav">
-            <li class="nav-item dashboardItem" [ngClass]="{'currentPage': isDashboardCurrentPage()}">
-                <a class="nav-link" routerLinkActive="active" routerLink="/dashboard"
-                    style="padding-top: 0;">
-                    <img src="/assets/main/nav/dashboard.png" /> Dashboard
+            <li class="nav-item dropdown dashboardItem" routerLinkActive="active" [ngClass]="{'currentPage': isDataProgramCurrentPage()}">
+                <a href="#" class="dropdown-toggle nav-link" role="button" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                    <img src="/assets/main/nav/dashboard.png" />
+                    Water Data Program
                 </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" routerLink="/dashboard">
+                        Manager Dashboard
+                    </a>
+                    <a class="dropdown-item" routerLink="/sensor-status">
+                        Sensor Status
+                    </a>
+                </div>
             </li>
             <li class="nav-item mapItem" [ngClass]="{'currentPage': isMapCurrentPage()}">
                 <a class="nav-link" routerLinkActive="active" routerLink="/well-map">
                     <img src="/assets/main/nav/map.png" /> Well Map
-                </a>
-            </li>
-            <li class="nav-item sensorStatusItem" [ngClass]="{'currentPage': isSensorStatusCurrentPage()}">
-                <a class="nav-link" routerLinkActive="active" routerLink="/sensor-status">
-                    <img src="/assets/main/nav/sensor_status.png" /> Sensor Status
                 </a>
             </li>
             <li class="nav-item dropdown chemigationItem" routerLinkActive="active" [ngClass]="{'currentPage': isChemigationCurrentPage()}">
@@ -144,8 +148,6 @@
             </li>
             <li class="nav-item searchItem">
                 <img src="/assets/main/nav/search.png">
-                <!-- <input type="text" class="form-control" style="display: inline; width:auto;"
-                    placeholder="Registration #" (click)="getSearchSuggestions()"> -->
                 <p-autoComplete #geoOptixSearch field="Name" placeholder="Search..." emptyMessage="No Results"
                     [(ngModel)]="text" [suggestions]="searchSuggestions" (completeMethod)="search($event)"
                     (onFocus)="reFocus(geoOptixSearch)" (onSelect)="select($event)" type="search"
