--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -115,6 +115,9 @@
                     <a class="dropdown-item" routerLink="/dashboard">
                         Manager Dashboard
                     </a>
+                    <a class="dropdown-item" routerLink="/sensors">
+                        Sensor List
+                    </a>
                     <a class="dropdown-item" routerLink="/sensor-status">
                         Sensor Status
                     </a>
