--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -406,54 +406,56 @@
                     </a>
                 </div>
                 <div class="card-body">
-                    <ng-container *ngFor="let installation of installations; index as i">
-                        <div class="row">
-                            <div class="col-12 col-md-6">
+                    <ng-container *ngIf="installations; else installationsLoading">
+                        <ng-container *ngIf="installations.length === 0; else installationsDetails">
+                            <p class="font-italic">
+                                No Installations Records were found for this well.
+                            </p>
+                        </ng-container>
+                        <ng-template #installationsDetails>
+                            <ng-container *ngFor="let installation of installations; index as i">
                                 <div class="row">
-                                    <div class="col-12  col-sm-6 label"><strong>Installation Name: </strong> </div>
-                                    <div class="col-12  col-sm-6">{{installation.InstallationCanonicalName}}</div>
-                                    <div class="col-12  col-sm-6 label"><strong>Installation Status: </strong> </div>
-                                    <div class="col-12  col-sm-6">{{installation.Status}}</div>
-                                    <div class="col-12  col-sm-6 label"><strong>Installation Date: </strong></div>
-                                    <div class="col-12  col-sm-6">{{getInstallationDate(installation)}}</div>
-                                    <div class="col-12  col-sm-6 label"><strong>GPS Location: </strong></div>
-                                    <div class="col-12  col-sm-6">lat: {{installation.Latitude | number: '1.0-3'}}, lng:
-                                        {{installation.Longitude | number: '1.0-3'}}</div>
-                                    <div class="col-12  col-sm-6 label"><strong>Flowmeter Serial Number: </strong></div>
-                                    <div class="col-12  col-sm-6">{{installation.FlowmeterSerialNumber}}</div>
-                                    <div class="col-12  col-sm-6 label"><strong>Sensor Serial Number: </strong></div>
-                                    <div class="col-12  col-sm-6">{{installation.SensorSerialNumber}}</div>
+                                    <div class="col-12 col-md-6">
+                                        <div class="row">
+                                            <div class="col-12  col-sm-6 label"><strong>Installation Name: </strong> </div>
+                                            <div class="col-12  col-sm-6">{{installation.InstallationCanonicalName}}</div>
+                                            <div class="col-12  col-sm-6 label"><strong>Installation Status: </strong> </div>
+                                            <div class="col-12  col-sm-6">{{installation.Status}}</div>
+                                            <div class="col-12  col-sm-6 label"><strong>Installation Date: </strong></div>
+                                            <div class="col-12  col-sm-6">{{getInstallationDate(installation)}}</div>
+                                            <div class="col-12  col-sm-6 label"><strong>GPS Location: </strong></div>
+                                            <div class="col-12  col-sm-6">lat: {{installation.Latitude | number: '1.0-3'}}, lng:
+                                                {{installation.Longitude | number: '1.0-3'}}</div>
+                                            <div class="col-12  col-sm-6 label"><strong>Flowmeter Serial Number: </strong></div>
+                                            <div class="col-12  col-sm-6">{{installation.FlowmeterSerialNumber}}</div>
+                                            <div class="col-12  col-sm-6 label"><strong>Sensor Serial Number: </strong></div>
+                                            <div class="col-12  col-sm-6">{{installation.SensorSerialNumber}}</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-md-6 text-center">
+                                        <ng-container *ngIf="installationPhotos[installation.InstallationCanonicalName] && installationPhotos[installation.InstallationCanonicalName].length > 0; else noInstallationPhotos">
+                                            <ng-container *ngIf="installationPhotos[installation.InstallationCanonicalName].length === 1; else manyInstallationPhotos">
+                                                <img class="img img-fluid" src="{{installation.PhotoDataUrls[0].path}}" style="height: 300px" />
+                                            </ng-container>
+                                            <ng-template #manyInstallationPhotos>
+                                                <carousel [images]="installation.PhotoDataUrls" [height]="300" [cellsToShow]="1" [objectFit]="contain" [dots]="true"></carousel>
+                                            </ng-template>
+                                        </ng-container>
+                                        <ng-template #noInstallationPhotos>
+                                            <img class="img img-fluid" style="height:300px" src="/assets/main/no-photo-available.jpg" />
+                                        </ng-template>        
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-12 col-md-6 text-center">
-                                <carousel *ngIf="installationPhotos[installation.InstallationCanonicalName]?.length > 1"
-                                    [images]="installation.PhotoDataUrls" [height]="300" [cellsToShow]="1"
-                                    [objectFit]="contain" [dots]="true">
-                                </carousel>
-
-                                <img *ngIf="installationPhotos[installation.InstallationCanonicalName]?.length === 1" class="img img-fluid" src="{{installation.PhotoDataUrls[0].path}}"
-                                    style="height: 300px" />
-
-                                <ng-container *ngIf="!installationPhotos[installation.InstallationCanonicalName]?.length">
-                                    <span class="fas fa-spinner loading-spinner"></span>
-                                    <p>Loading...</p>
-                                </ng-container>
-
-                                <img *ngIf="installationPhotos[installation.InstallationCanonicalName]?.length === 0" class="img img-fluid" style="height:300px"
-                                    src="/assets/main/no-photo-available.jpg" />
-                            </div>
-                        </div>
-                        <hr *ngIf="i != installations.length - 1" />
+                                <hr *ngIf="i != installations.length - 1" />
+                            </ng-container>
+                        </ng-template>
                     </ng-container>
-                    <ng-container *ngIf="!installations">
+                    <ng-template #installationsLoading>
                         <div class="row text-center">
                             <span class="fas fa-spinner loading-spinner"></span>
                             <p>Loading...</p>
                         </div>
-                    </ng-container>
-                    <p class="font-italic" *ngIf="installations?.length === 0">
-                        No Installations Records were found for this well.
-                    </p>
+                    </ng-template>
                 </div>
             </div>
         </div>
