--- a/Source/Zybach.Web/src/app/pages/sensor-list/sensor-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/sensor-list/sensor-list.component.html
@@ -1,1 +1,15 @@
-<p>sensor-list works!</p>
+<div class="container navCaretMargin">
+    <app-alert-display></app-alert-display>
+    <div class="row mt-2">
+        <div class="col">
+            <button class="btn btn-secondary btn-md float-right mr-3" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
+            ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
+            <fresca-clear-grid-filters-button class="mr-3 float-right" [grid]="sensorsGrid">
+            </fresca-clear-grid-filters-button>
+        </div>
+    </div>
+    <ag-grid-angular #sensorsGrid style="width: 100%; height: 500px;" class="ag-theme-balham mt-2"
+        [rowData]="sensors" [columnDefs]="sensorColumnDefs" [pagination]="true" [paginationPageSize]="100"
+        (gridReady)="onGridReady($event)">
+    </ag-grid-angular>
+</div>
