--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -321,7 +321,7 @@
                             <div class="col-sm">
                                 <div class="row">
                                     <div class="col">
-                                        <h5 class="d-inline-block">Water Level Inspections</h5>
+                                        <h5 class="d-inline-block">Water Level</h5>
                                         <button class="btn btn-secondary btn-md float-right m-2" style="cursor: pointer;" (click)="exportWLIToCsv()" placement="top"
                                         ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
                                         <fresca-clear-grid-filters-button class="m-2 float-right" [grid]="waterLevelInspectionsGrid">
@@ -340,7 +340,7 @@
                             <div class="col-sm">
                                 <div class="row">
                                     <div class="col">
-                                        <h5 class="d-inline-block">Water Quality Inspections</h5>
+                                        <h5 class="d-inline-block">Water Quality</h5>
                                         <button class="btn btn-secondary btn-md float-right m-2" style="cursor: pointer;" (click)="exportWQIToCsv()" placement="top"
                                         ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
                                         <fresca-clear-grid-filters-button class="m-2 float-right" [grid]="waterQualityInspectionsGrid">
