sensor detail page stubbed out

--- a/Source/Zybach.Web/src/app/pages/sensor-list/sensor-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/sensor-list/sensor-list.component.html
@@ -1,5 +1,10 @@
 <div class="container navCaretMargin">
     <app-alert-display></app-alert-display>
+    <div class="row">
+        <div class="col-12">
+            <h2 class="d-inline-block">Sensor List</h2>
+        </div>
+    </div>
     <div class="row mt-2">
         <div class="col">
             <button class="btn btn-secondary btn-md float-right mr-3" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
