added rich text for sensor index page; style and wording tweaks per KE

--- a/Source/Zybach.Web/src/app/pages/sensor-list/sensor-list.component.html
+++ b/Source/Zybach.Web/src/app/pages/sensor-list/sensor-list.component.html
@@ -3,6 +3,7 @@
     <div class="row">
         <div class="col-12">
             <h2 class="d-inline-block">Sensor List</h2>
+            <custom-rich-text [customRichTextTypeID]="richTextTypeID"></custom-rich-text>
         </div>
     </div>
     <div class="row mt-2">
