--- a/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -119,7 +119,7 @@
                         Sensor List
                     </a>
                     <a class="dropdown-item" routerLink="/sensor-status">
-                        Sensor Status
+                        Sensor Status Map
                     </a>
                 </div>
             </li>
