--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-detail/chemigation-permit-detail.component.html
@@ -39,11 +39,7 @@
                 <span class="fas fa-edit"></span>
                 Edit Permit 
             </a>
-            <a *ngIf="permitHasCurrentRecord()" class="dropdown-item disabled" routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}/add-record">
-                <span class="fas fa-plus"></span> 
-                Create Renewal 
-            </a>
-            <a *ngIf="!permitHasCurrentRecord()" class="dropdown-item" routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}/add-record">
+            <a class="dropdown-item" [ngClass]="{'disabled': permitHasCurrentRecord()}" routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}/add-record">
                 <span class="fas fa-plus"></span> 
                 Create Renewal 
             </a>
@@ -65,13 +61,8 @@
                     </div>
                 </div>
                 <div class="col-4 text-center pl-2">Annual Record</div>
-                <div class="col-4 float-right" *ngIf="!currentYearAnnualRecord">
-                    <a class="btn btn-zybach btn-sm float-right disabled">
-                        <span class="fas fa-edit"></span> Edit Record
-                    </a>
-                </div>
-                <div class="col-4 float-right" *ngIf="currentYearAnnualRecord">
-                    <a class="btn btn-zybach btn-sm float-right"
+                <div class="col-4 float-right">
+                    <a class="btn btn-zybach btn-sm float-right" [ngClass]="{'disabled': !currentYearAnnualRecord}"
                         routerLink="/chemigation-permits/{{chemigationPermit?.ChemigationPermitNumber}}/{{yearToDisplay}}/edit">
                         <span class="fas fa-edit"></span> Edit Record
                     </a>
