able to print an image or pdf given a url or snippet using SitkaCapture

--- a/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
+++ b/Source/Zybach.Web/src/app/pages/well-detail/well-detail.component.html
@@ -20,6 +20,7 @@
                                     routerLink="/wells/{{wellID}}/edit-registration-id">
                                     <span class="fas fa-edit"></span> Edit Reg. ID
                                 </a>
+                                <button (click)="printToPdf()" class="btn btn-sm btn-zybach mr-2"><i class="fa fa-file-pdf"></i> Print to PDF</button>
                             </div>
                         </div>
                         <div class="card-body">
