add more data annotations to CPAR upsert for better validation messages; remove button disable so users can see those errors readily; remove required attribute from pivot

--- a/Source/Zybach.Web/src/app/shared/components/chemigation-permit-annual-record-upsert/chemigation-permit-annual-record-upsert.component.html
+++ b/Source/Zybach.Web/src/app/shared/components/chemigation-permit-annual-record-upsert/chemigation-permit-annual-record-upsert.component.html
@@ -31,11 +31,11 @@
             </div>
 
             <div class="col-6 control-label text-right mb-2">
-                <label class="required"><strong>Pivot Name: </strong></label>
+                <label><strong>Pivot Name: </strong></label>
             </div>
             <div class="col-6 text-left mb-2">
                 <input type="text" class="form-control" name="PivotName"
-                    placeholder="Pivot Name" required [(ngModel)]="model.PivotName" />
+                    placeholder="Pivot Name" [(ngModel)]="model.PivotName" />
             </div>
 
             <div class="col-6 control-label text-right mb-2">
