--- a/Source/Zybach.Web/src/app/pages/chemigation-permit-edit-record/chemigation-permit-edit-record.component.html
+++ b/Source/Zybach.Web/src/app/pages/chemigation-permit-edit-record/chemigation-permit-edit-record.component.html
@@ -79,19 +79,19 @@
                         <hr class="w-90" />
 
                         <zybach-chemigation-permit-annual-record-upsert #annualRecordForm
-                            (isFormValid)="isAnnualRecordFormValid($event)" [(model)]="model">
+                            [(model)]="model">
                         </zybach-chemigation-permit-annual-record-upsert>
 
                         <hr class="w-90" />
 
                         <zybach-chemigation-permit-applicators-editor #applicatorsForm
-                            (isFormValid)="isApplicatorsFormValid($event)" [(model)]="model.Applicators">
+                            [(model)]="model.Applicators">
                         </zybach-chemigation-permit-applicators-editor>
 
                         <hr class="w-90" />
 
                         <zybach-chemigation-permit-chemical-formulations-editor #chemicalFormulationsForm
-                            (isFormValid)="isChemicalFormulationsFormValid($event)" [(model)]="model.ChemicalFormulations">
+                            [(model)]="model.ChemicalFormulations">
                         </zybach-chemigation-permit-chemical-formulations-editor>
 
                     </div>
